fix(ffe-tables): replace hardcoded spacing with variables
BREAKING CHANGE: This commit is likely to cause small visual regressions caused by slightly altered margin and padding values.

--- a/packages/ffe-tables/less/sortable-table.less
+++ b/packages/ffe-tables/less/sortable-table.less
@@ -54,7 +54,7 @@
         width: 12px;
         vertical-align: middle;
         fill: @ffe-blue-royal;
-        margin-left: 8px;
+        margin-left: @ffe-spacing-xs;
         transition: transform @ffe-transition-duration @ffe-ease-in-out-back;
         .native & {
             @media (prefers-color-scheme: dark) {
